New: smoketest, perftest, update to wrapper, jvm SANE defaults